--- a/index.html
+++ b/index.html
@@ -180,7 +180,39 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+var fireballSize = 22;
 
+var getFireballSpeed = function(left) {
+  if (left) {
+    return 5;
+  } else {
+    return 2;
+  }
+};
+
+var wizardSpeed = 3;
+var wizardWidth = 70;
+
+var getWizardHeight = function() {
+    var wizardHeight = 1.337 * wizardWidth;
+    return wizardHeight;
+};
+
+var getWizardX = function(width) {
+  var WizardX = width / 2;
+  return WizardX;
+};
+
+getWizardX();
+
+var getWizardY = function(height) {
+  var WizardY = 2/3 * height;
+  return WizardY;
+};
+
+getWizardY();
+</script>
 <script src="js/game.js"></script>
 
 </body>
