--- a/index.html
+++ b/index.html
@@ -181,34 +181,30 @@
   </div>
 </template>
 <script>
+var WIZARD_PROPORTION = 1.337;
 var fireballSize = 22;
 
 var getFireballSpeed = function(left) {
-  if (left) {
-    return 5;
-  } else {
-    return 2;
-  }
+    return left ? 5 : 2;
 };
 
 var wizardSpeed = 3;
 var wizardWidth = 70;
 
 var getWizardHeight = function() {
-    var wizardHeight = 1.337 * wizardWidth;
-    return wizardHeight;
+    return WIZARD_PROPORTION * wizardWidth;
 };
 
 var getWizardX = function(width) {
-  var WizardX = width / 2;
-  return WizardX;
+  var wizardX = (width / 2) - (wizardWidth / 2);
+  return wizardX;
 };
 
 getWizardX();
 
 var getWizardY = function(height) {
-  var WizardY = 2/3 * height;
-  return WizardY;
+  var wizardY = 1/3 * height;
+  return wizardY;
 };
 
 getWizardY();
