--- a/index.html
+++ b/index.html
@@ -185,26 +185,24 @@ var WIZARD_PROPORTION = 1.337;
 var fireballSize = 22;
 
 var getFireballSpeed = function(left) {
-    return left ? 5 : 2;
+  return left ? 5 : 2;
 };
 
 var wizardSpeed = 3;
 var wizardWidth = 70;
 
 var getWizardHeight = function() {
-    return WIZARD_PROPORTION * wizardWidth;
+  return WIZARD_PROPORTION * wizardWidth;
 };
 
 var getWizardX = function(width) {
-  var wizardX = (width / 2) - (wizardWidth / 2);
-  return wizardX;
+  return (width / 2) - (wizardWidth / 2);
 };
 
 getWizardX();
 
 var getWizardY = function(height) {
-  var wizardY = 1/3 * height;
-  return wizardY;
+  return height / 3;
 };
 
 getWizardY();
