--- a/index.html
+++ b/index.html
@@ -205,9 +205,14 @@ var getWizardY = function(height) {
 };
 
 </script>
-<script src="js/stat.js"></script>
-<script src="js/game.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/game.js"></script>
+<script src="js/util.js"></script>
+<script src="js/param.js"></script>
+<script src="js/dialog.js"></script>
+<script src="js/stat.js"></script>
+
+
 
 </body>
 </html>
